package cn.thinkinjava.design.pattern.create.factory.factorymethod.frame;


/**
 * 具体产品实现角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class ConcreteProduct2 implements Product{

}
