package cn.thinkinjava.design.pattern.create.factory.factorymethod.frame;

/**
 * 产品接口角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public interface Product {
}
